--- a/livros/package.json
+++ b/livros/package.json
@@ -21,6 +21,7 @@
   "author": "Miqueias Rodrigues Barreto",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
